tests/error/type_errors/call_not_function.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy(compile=True)
5:    def foo(x: int) -> int:
6:        return x(42)
                 ^
GuppyTypeError: Expected function type, got `int`
